--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *,
 ::after,
 ::before {
@@ -71,6 +72,17 @@ main {
 
 .active {
   display: block;
+}
+
+#image-centree {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+}
+#image-centree:hover {
+  cursor: pointer;
 }
 
 header#side-bar-log #sidebar-wrapper {
@@ -469,25 +481,20 @@ section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-bo
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  width: 95%;
+  width: 100%;
   min-height: 120px;
 }
 section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li {
   width: 150px;
   text-align: center;
 }
-section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li img {
+section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li img.pict-book-crud {
   height: 100px;
   width: auto;
   padding-left: 20px;
   z-index: -1;
 }
-section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li img:hover {
-  position: absolute;
-  top: 0;
-  left: 20px;
-  transform: scale(2);
-  z-index: 999;
+section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li img.pict-book-crud:hover {
   cursor: zoom-in;
 }
 section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.item-title-crud {
@@ -553,4 +560,55 @@ section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-bo
 section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.container-box-option-crud div.box-option-crud ul.list-option-crud li:hover {
   font-weight: bold;
   cursor: pointer;
+}
+section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book h3 {
+  margin-bottom: 15px;
+  color: #0868ae;
+}
+section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-left {
+  width: 40%;
+  color: #0868ae;
+}
+section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-right {
+  width: 40%;
+}
+section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-right ul.all-info-book li {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  font-size: 16px;
+  padding: 6px 0;
+  color: gray;
+}
+@media screen and (min-width: 950px) {
+  section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-right ul.all-info-book li {
+    width: 100%;
+    height: -moz-fit-content;
+    height: fit-content;
+    font-size: 18px;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-right ul.all-info-book li:nth-child(odd) {
+    background-color: #fafafa; /* couleur pour les éléments impairs */
+  }
+  section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-right ul.all-info-book li:nth-child(even) {
+    background-color: #f0f7ff; /* couleur pour les éléments impairs */
+  }
+}
+section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-right ul.all-info-book li span.bdd-var {
+  font-size: 16px;
+  color: #0868ae;
+}
+@media screen and (min-width: 950px) {
+  section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-right ul.all-info-book li span.bdd-var {
+    font-size: 18px;
+  }
 }/*# sourceMappingURL=style-admin.css.map */
