maj detail crud book

--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -445,19 +445,33 @@ section#dashboard-page-book-crud .container-crud-book-tabs div.search-add-crud-b
 section#dashboard-page-book-crud .container-crud-book-tabs div.search-add-crud-book div.search-crud-input button#btn-search-book {
   width: 100px;
   height: 40px;
+  font-weight: bold;
   border-radius: 10px;
   background-color: #0868ae;
   border: #0868ae;
   color: #fff;
+  margin-right: 30px;
 }
 section#dashboard-page-book-crud .container-crud-book-tabs div.search-add-crud-book div.search-crud-input button#btn-search-book:hover {
   cursor: pointer;
   background-color: #05497b;
 }
+section#dashboard-page-book-crud .container-crud-book-tabs div.search-add-crud-book div.search-crud-input button#btn-all-detail {
+  border: none;
+  background-color: transparent;
+  color: #0868ae;
+  font-weight: bold;
+}
+section#dashboard-page-book-crud .container-crud-book-tabs div.search-add-crud-book div.search-crud-input button#btn-all-detail:hover {
+  cursor: pointer;
+  color: #05497b;
+  text-decoration: underline;
+}
 section#dashboard-page-book-crud .container-crud-book-tabs div.search-add-crud-book button#btn-add-book {
-  width: 100px;
+  width: 120px;
   height: 40px;
   border-radius: 10px;
+  font-weight: bold;
   background-color: #0868ae;
   border: #0868ae;
   color: #fff;
@@ -499,8 +513,9 @@ section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-bo
 }
 section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.item-title-crud {
   color: #0868ae;
+  font-weight: bold;
   font-family: "Nova Slim", cursive, sans-serif;
-  max-width: 300px;
+  width: 400px;
 }
 section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud li.btn-option-crud {
   font-size: 30px;
@@ -562,24 +577,31 @@ section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-bo
   cursor: pointer;
 }
 section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book {
+  display: none;
+}
+section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book.active {
+  display: block;
+}
+section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   padding-top: 30px;
   padding-bottom: 30px;
 }
-section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book h3 {
+section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud h3 {
   margin-bottom: 15px;
   color: #0868ae;
 }
-section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-left {
+section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-left {
   width: 40%;
   color: #0868ae;
 }
-section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-right {
+section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right {
   width: 40%;
 }
-section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-right ul.all-info-book li {
+section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -588,7 +610,7 @@ section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-bo
   color: gray;
 }
 @media screen and (min-width: 950px) {
-  section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-right ul.all-info-book li {
+  section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li {
     width: 100%;
     height: -moz-fit-content;
     height: fit-content;
@@ -596,19 +618,19 @@ section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-bo
     flex-direction: row;
     justify-content: space-between;
   }
-  section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-right ul.all-info-book li:nth-child(odd) {
+  section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li:nth-child(odd) {
     background-color: #fafafa; /* couleur pour les éléments impairs */
   }
-  section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-right ul.all-info-book li:nth-child(even) {
+  section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li:nth-child(even) {
     background-color: #f0f7ff; /* couleur pour les éléments impairs */
   }
 }
-section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-right ul.all-info-book li span.bdd-var {
+section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li span.bdd-var {
   font-size: 16px;
   color: #0868ae;
 }
 @media screen and (min-width: 950px) {
-  section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book .item-complete-right ul.all-info-book li span.bdd-var {
+  section#dashboard-page-book-crud .container-crud-book-tabs div#container-list-book-crud ul.list-book-crud li.item-book-crud ul.detail-item-book-crud div.container-complete-detail-info-book div.container-flex-crud .item-complete-right ul.all-info-book li span.bdd-var {
     font-size: 18px;
   }
 }/*# sourceMappingURL=style-admin.css.map */
