--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -482,256 +482,295 @@ section#dashboard-page-profil {
 
 // ----------  SECTION DASHBOARD - PAGE CRUD----------
 
-section#dashboard-page-book-crud {
-  .container-crud-book-tabs {
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.container-crud-book-tabs {
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-    div.search-add-crud-book {
+  div.search-add-crud-book {
+    position: sticky;
+    top: 0;
+    background-color: $white; /* couleur de fond pour la div */
+    z-index: 100;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid gray;
+
+    div.search-crud-input {
       display: flex;
-      flex-wrap: wrap;
       align-items: center;
       justify-content: center;
-      margin-top: 10px;
-      margin-bottom: 20px;
+      flex-grow: 1;
 
-      div.search-crud-input {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-grow: 1;
-        input#input-seach-book {
-          width: 30%;
-          height: 40px;
-          border-radius: 5px;
-          margin: 10px;
-        }
-
-        button#btn-search-book {
-          width: 100px;
-          height: 40px;
-          font-weight: bold;
-          border-radius: 10px;
-          background-color: $main-blue;
-          border: $main-blue;
-          color: $white;
-          margin-right: 30px;
-
-          &:hover {
-            cursor: pointer;
-            background-color: $btn-main-blue-over;
-          }
-        }
-
-        button#btn-all-detail {
-          border: none;
-          background-color: transparent;
-          color: $main-blue;
-          font-weight: bold;
-
-          &:hover {
-            cursor: pointer;
-            color: $btn-main-blue-over;
-            text-decoration: underline;
-          }
-        }
+      input#input-seach-book {
+        width: 30%;
+        height: 40px;
+        padding-left: 10px;
+        border-radius: 5px;
+        margin: 10px;
       }
 
-      button#btn-add-book {
-        width: 120px;
+      button#btn-search-book {
+        width: 100px;
         height: 40px;
-        border-radius: 10px;
         font-weight: bold;
+        border-radius: 10px;
         background-color: $main-blue;
         border: $main-blue;
         color: $white;
-        margin-right: 20px;
+        margin-right: 30px;
 
         &:hover {
           cursor: pointer;
           background-color: $btn-main-blue-over;
         }
       }
+
+      button#btn-all-detail {
+        border: none;
+        background-color: transparent;
+        color: $main-blue;
+        font-weight: bold;
+
+        &:hover {
+          cursor: pointer;
+          color: $btn-main-blue-over;
+          text-decoration: underline;
+        }
+      }
     }
 
-    div#container-list-book-crud {
-      ul.list-book-crud {
-        li.item-book-crud {
-          padding-top: 10px;
-          padding-bottom: 5px;
+    button#btn-add-book {
+      width: 120px;
+      height: 40px;
+      border-radius: 10px;
+      font-weight: bold;
+      background-color: $main-blue;
+      border: $main-blue;
+      color: $white;
+      margin-right: 20px;
 
-          &:nth-child(odd) {
-            background-color: #f0f7ff;
-            border-radius: 5px;
-          }
+      &:hover {
+        cursor: pointer;
+        background-color: $btn-main-blue-over;
+      }
+    }
+  }
 
-          ul.detail-item-book-crud {
-            position: relative;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            align-items: center;
-            width: 100%;
-            min-height: 120px;
-            li {
-              width: 150px;
-              text-align: center;
-              img.pict-book-crud {
-                height: 100px;
-                width: auto;
-                padding-left: 20px;
-                z-index: -1;
+  div#container-list-book-crud {
+    ul.list-book-crud {
+      li.item-book-crud {
+        padding-top: 10px;
+        padding-bottom: 5px;
 
-                &:hover {
-                  cursor: zoom-in;
-                }
-              }
-            }
-            li.item-title-crud {
-              color: $main-blue;
-              font-weight: bold;
-              font-family: "Nova Slim", cursive, sans-serif;
-              width: 400px;
-            }
+        &:nth-child(odd) {
+          background-color: #f0f7ff;
+          border-radius: 5px;
+        }
 
-            li.btn-option-crud {
-              font-size: 30px;
-              padding: 15px;
+        ul.detail-item-book-crud {
+          position: relative;
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: space-between;
+          align-items: center;
+          width: 100%;
+          min-height: 120px;
+          li {
+            width: 150px;
+            text-align: center;
+            img.pict-book-crud {
+              height: 100px;
+              width: auto;
+              padding-left: 20px;
+              z-index: -1;
 
               &:hover {
-                cursor: pointer;
+                cursor: zoom-in;
               }
             }
+          }
+          li.item-title-crud {
+            color: $main-blue;
+            font-weight: bold;
+            font-family: "Nova Slim", cursive, sans-serif;
+            width: 400px;
+          }
 
-            li.container-box-option-crud {
-              position: relative;
-              width: 0;
-              height: 0;
-              div.box-option-crud {
-                position: absolute;
-                right: 0px;
-                top: -70px;
-                width: 220px;
-                height: fit-content;
-                padding: 16px;
-                background-color: $white;
-                box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-                border-radius: 5px;
-                z-index: 9;
-                margin-bottom: 50px;
-                text-align: start;
-                display: none;
+          li.btn-option-crud {
+            position: relative;
+            font-size: 30px;
+            padding: 15px;
 
-                button.btn-close-option-box {
-                  position: absolute;
-                  top: 0;
-                  right: 12px;
-                  font-size: 18px;
-                  padding: 6px;
-                  border: none;
-                  background-color: transparent;
-
-                  &:hover {
-                    cursor: pointer;
-                  }
-                }
-
-                &.active {
-                  display: block;
-                }
-
-                h4 {
-                  font-size: 16px;
-                  font-weight: bold;
-                  color: $btn-red;
-                  margin-bottom: 2px;
-                }
-
-                ul.list-option-crud {
-                  li {
-                    text-align: start;
-                    font-size: 14px;
-                    padding: 3px;
-                    width: 100%;
-                    &:hover {
-                      font-weight: bold;
-                      cursor: pointer;
-                    }
-                  }
-                }
-              }
+            &:hover {
+              cursor: pointer;
             }
+          }
 
-            div.container-complete-detail-info-book {
+          li.container-box-option-crud {
+            width: 0;
+            height: 0;
+
+            div.box-option-crud {
+              position: absolute;
+              right: 120px;
+              top: 0;
+              width: 220px;
+              height: fit-content;
+              padding: 16px;
+              background-color: $white;
+              box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+              border-radius: 5px;
+              z-index: 9;
+              margin-bottom: 50px;
+              text-align: start;
               display: none;
+
+              button.btn-detail-option-box {
+                border: none;
+                background-color: transparent;
+
+                &:hover {
+                  cursor: pointer;
+                  font-weight: bold;
+                }
+              }
+
+              button.btn-close-option-box {
+                position: absolute;
+                top: 0;
+                right: 12px;
+                font-size: 18px;
+                padding: 6px;
+                border: none;
+                background-color: transparent;
+
+                &:hover {
+                  cursor: pointer;
+                }
+              }
 
               &.active {
                 display: block;
               }
 
-              div.container-flex-crud {
-                width: 100%;
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-evenly;
-                padding-top: 30px;
-                padding-bottom: 30px;
+              h4 {
+                font-size: 16px;
+                font-weight: bold;
+                color: $btn-red;
+                margin-bottom: 2px;
+              }
 
-                h3 {
-                  margin-bottom: 15px;
-                  color: $main-blue;
+              ul.list-option-crud {
+                li {
+                  text-align: start;
+                  font-size: 14px;
+                  padding: 3px;
+                  width: 100%;
+                  &:hover {
+                    font-weight: bold;
+                    cursor: pointer;
+                  }
                 }
-  
-                .item-complete-left {
-                  width: 40%;
-                  color: $main-blue;
-                }
-  
-                .item-complete-right {
-                  width: 40%;
-                  ul.all-info-book {
-                    li {
-                      display: flex;
-                      flex-wrap: wrap;
-                      flex-direction: column;
-                      font-size: 16px;
-                      padding: 6px 0;
-                      color: gray;
-                      @media screen and (min-width: 950px) {
-                        width: 100%;
-                        height: fit-content;
-                        font-size: 18px;
-                        flex-direction: row;
-                        justify-content: space-between;
-  
-                        &:nth-child(odd) {
-                          background-color: #fafafa; /* couleur pour les éléments impairs */
-                        }
-  
-                        &:nth-child(even) {
-                          background-color: $bgc-dashboard; /* couleur pour les éléments impairs */
-                        }
+              }
+            }
+          }
+
+          div.container-complete-detail-info-book {
+            display: none;
+
+            &.active {
+              display: block;
+            }
+
+            div.container-flex-crud {
+              width: 100%;
+              display: flex;
+              flex-wrap: wrap;
+              justify-content: space-evenly;
+              padding-top: 30px;
+              padding-bottom: 30px;
+
+              h3 {
+                margin-bottom: 15px;
+                color: $main-blue;
+              }
+
+              .item-complete-left {
+                width: 40%;
+                color: $main-blue;
+              }
+
+              .item-complete-right {
+                width: 40%;
+                ul.all-info-book {
+                  li {
+                    display: flex;
+                    flex-wrap: wrap;
+                    flex-direction: column;
+                    font-size: 16px;
+                    padding: 6px 0;
+                    color: gray;
+                    @media screen and (min-width: 950px) {
+                      width: 100%;
+                      height: fit-content;
+                      font-size: 18px;
+                      flex-direction: row;
+                      justify-content: space-between;
+
+                      &:nth-child(odd) {
+                        background-color: #fafafa; /* couleur pour les éléments impairs */
                       }
-  
-                      span.bdd-var {
-                        font-size: 16px;
-                        color: $main-blue;
-                        @media screen and (min-width: 950px) {
-                          font-size: 18px;
-                        }
+
+                      &:nth-child(even) {
+                        background-color: $bgc-dashboard; /* couleur pour les éléments impairs */
+                      }
+                    }
+
+                    span.bdd-var {
+                      font-size: 16px;
+                      color: $main-blue;
+                      @media screen and (min-width: 950px) {
+                        font-size: 18px;
                       }
                     }
                   }
                 }
               }
-
             }
           }
         }
       }
+    }
+  }
+}
+
+section#dashboard-page-book-add {
+  form {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+
+    div.form-add-book-left {
+      width: 50%;
+
+      div.add-form-template-label-input {
+        width: 100%;
+      }
+    }
+
+    div.form-add-book-left {
+      width: 50%;
+    }
+
+    div.group-btn-form-add-commun {
+      width: 100%;
     }
   }
 }
