--- a/css/style-connect.css
+++ b/css/style-connect.css
@@ -47,19 +47,6 @@ a {
   margin: 15px 0;
 }
 
-button {
-  border-radius: 20px;
-  border: 1px solid #ff5e38;
-  background-color: #ff5e38;
-  color: #ffffff;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 12px 45px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  transition: transform 80ms ease-in;
-}
-
 button:active {
   transform: scale(0.95);
 }
@@ -69,12 +56,24 @@ button:focus {
 }
 
 button.ghost {
-  background-color: transparent;
-  border-color: #ffffff;
+  background-color: #ff5e38;
+  border-color: #fff;
+  border-radius: 5px;
+  border: 1px solid #0868ae;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 45px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
+}
+button.ghost:hover {
+  cursor: pointer;
 }
 
 form {
-  background-color: #ffffff;
+  background-color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -82,6 +81,21 @@ form {
   padding: 0 50px;
   height: 100%;
   text-align: center;
+}
+form button {
+  border-radius: 5px;
+  border: 1px solid #0868ae;
+  background-color: #0868ae;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 45px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
+}
+form button:hover {
+  cursor: pointer;
 }
 
 input {
@@ -165,7 +179,7 @@ main #section-authentication .overlay {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
-  color: #ffffff;
+  color: #fff;
   position: relative;
   left: -100%;
   height: 100%;
